<resources>
    <string name="app_name">Covid19 India Tracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="deaths">Deaths</string>
    <string name="affected">Confirmed</string>
    <string name="active">Active</string>
    <string name="recovered">Recovered</string>
    <string name="Saved">Saved</string>
    <string name="add_city">Add District</string>
    <string name="add_state">Add State</string>
    <string name="select_state">Select State/UT</string>
    <string name="select_state_essential">Select state/UT</string>
    <string name="districts">Districts</string>
    <string name="district">District</string>
    <string name="states">States</string>
    <string name="search_city">Search district</string>
    <string name="Search">Search</string>
    <string name="monitoring_district">Monitor Districts</string>
    <string name="monitoring_states">Monitor State/UTs</string>
    <string name="state_tracker">State/UTs</string>
    <string name="title_daily_updates">Today\'s updates</string>
    <string name="no_new_updates">No new updates</string>
    <string name="total_testing">Total testing </string>
    <string name="top_district">Top Districts</string>
    <string name="view_all">View All</string>
    <string name="affected_district">Affected Districts</string>
    <string name="download">Download</string>
    <string name="remind_me_later">Remind me later</string>
    <string name="affect">Confirm</string>
    <string name="recover">Recover</string>
    <string name="active_cases">*Active count</string>
    <string name="confirmed_cases">*Confirmed count</string>
    <string name="more_updates">More Updates</string>
    <string name="search_city_toolbar">Search district</string>
    <string name="exit">Exit</string>
    <string name="search_city_state">Search District / State / UT</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="settings">Settings</string>
    <string name="monitor_district_notification">Monitor district</string>
    <string name="today_notification">"Today's update "</string>
    <string name="overall_cases_notification">Overall Cases</string>
    <string name="share">Share</string>
    <string name="dark_mode">Dark mode</string>
    <string name="sync">Refresh</string>
    <string name="Updates">Updates</string>
    <string name="last_updated">Updated: %s</string>
    <string name="about_us">About</string>
    <string name="data_source_info">data source\nhttps://api.covid19india.org/\nhttps://covid-19india-api.herokuapp.com/</string>
    <string name="title_essentials">Essentials</string>
    <string name="select_essential">Select essential</string>
    <string name="select_district">Select district</string>
    <string name="state">State/UT</string>
    <string name="select_service">Select service</string>
    <string name="service">Service</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="install">Install</string>
    <string name="zone_distribution">Zone Distribution</string>
    <string name="analysis">Analysis</string>
    <string name="please_wait">Please wait…</string>
    <string name="nearby_essentials">Locate nearby essentials</string>
    <string name="select_location">Select location</string>
    <string name="share_stats">Share stats</string>
    <string name="finding_trouble_install"><u>install not working, try this</u></string>
    <string name="district_state_delta_percentage">Contributes %1$s cases across %2$s</string>
    <string name="district_state_meta_testing">%1$s found Covid positive during testing</string>
    <string name="district_state_rank">Position %1$s in %2$s</string>
    <string name="district_overall_rank">Position %s in India</string>
    <string name="district_rank_combined">No. %1$s in %2$s and %3$s in India</string>
    <string name="title_india">India</string>
    <string name="title_news">News</string>
    <string name="loading_news">Fetching news...</string>
    <string name="loading_news_error">Unable to load the news!</string>
    <string name="try_again">Try again</string>
    <string name="page_title_news">Covid19 news</string>
    <string name="top_districts">Top Districts</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="menu_widget">Add widget</string>
    <string name="menu_history">History</string>
    <string name="worldwide">Worldwide</string>
    <string name="district_new_cases">New confirmed cases</string>
    <string name="show_all">Show all</string>
    <string name="hide_all">Hide all</string>
    <string name="daily_new_cases">Daily new cases</string>
    <string name="active_count">*Active cases</string>
</resources>