<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_outline_near_me_24"
        android:title="@string/share_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/Search"
        app:iconTint="@color/toolbar_icon"
        app:showAsAction="always" />

    <item
        android:id="@+id/ui_mode"
        android:icon="@drawable/ic_ui_mode_icon"
        android:title="@string/dark_mode"
        app:iconTint="@color/ui_mode_selection"
        app:showAsAction="always" />

    <item
        android:id="@+id/essentials"
        android:title="@string/title_essentials"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_widget"
        android:title="@string/menu_widget"
        android:icon="@drawable/ic_baseline_add_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/worldwide"
        android:title="@string/worldwide"
        android:icon="@drawable/ic_baseline_rss_feed_24"
        app:showAsAction="never" />

    <item
        android:id="@+id/about_us"
        android:title="@string/about_us"
        android:icon="@drawable/ic_baseline_help_outline_24"
        app:showAsAction="never" />

</menu>