<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/state_tracker" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/Updates" />

    <item
        android:id="@+id/navigation_news"
        android:icon="@drawable/ic_baseline_web_24"
        android:title="@string/title_news" />

    <item
        android:id="@+id/navigation_essentials"
        android:icon="@drawable/ic_baseline_format_list_bulleted_24"
        android:title="@string/title_essentials" />

</menu>