<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.rpandey.covid19tracker_india.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.rpandey.covid19tracker_india.ui.dashboard.StateListFragment"
        android:label="@string/state_tracker"
        tools:layout="@layout/fragment_bookmared" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="com.rpandey.covid19tracker_india.ui.notifications.dailyupdates.DailyUpdatesFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />

    <fragment
        android:id="@+id/navigation_news"
        android:name="com.rpandey.covid19tracker_india.ui.notifications.todaysnews.TodaysNewsFragment"
        android:label="@string/title_news"
        tools:layout="@layout/fragment_todays_news" />

    <fragment
        android:id="@+id/navigation_essentials"
        android:name="com.rpandey.covid19tracker_india.ui.essentials.EssentialsFragment"
        android:label="@string/title_essentials"
        tools:layout="@layout/fragment_essentials" />
</navigation>