<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

    <PreferenceCategory app:title="@string/title_notifications">

        <SwitchPreferenceCompat
            app:key="district_notification"
            app:defaultValue="true"
            app:title="@string/monitor_district_notification" />

        <SwitchPreferenceCompat
            app:key="state_notification"
            app:defaultValue="true"
            app:title="@string/monitor_district_notification" />

        <SwitchPreferenceCompat
            app:key="today_update_notification"
            app:defaultValue="true"
            app:title="@string/today_notification" />

        <SwitchPreferenceCompat
            app:key="india_notification"
            app:title="@string/overall_cases_notification" />

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="bookmark_notification"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

    </PreferenceCategory>

</PreferenceScreen>