<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_bottomsheet"
    android:orientation="horizontal"
    android:paddingTop="14dp"
    android:paddingBottom="14dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/affected"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:fontFamily="sans-serif-medium" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/text_secondary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/active"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:fontFamily="sans-serif-medium" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/text_secondary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/recovered"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:fontFamily="sans-serif-medium" />

    <View
        android:layout_width="0.5dp"
        android:layout_height="match_parent"
        android:background="@color/text_secondary" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/deaths"
        android:textColor="@color/text_secondary"
        android:textSize="14sp"
        app:fontFamily="sans-serif-medium" />

</LinearLayout>